--- a/frontend/web/src/styles/sass/pages/performance/performance.scss
+++ b/frontend/web/src/styles/sass/pages/performance/performance.scss
@@ -240,8 +240,14 @@
       height: 48px;
     }
 
+    &__section-number {
+      width: 26px;
+      height: 26px;
+      font-size: 0.8rem;
+    }
+
     &__section-title {
-      font-size: 1.1rem;
+      font-size: 0.875rem;
     }
   }
 }
